--- a/src/css/style.css
+++ b/src/css/style.css
@@ -689,10 +689,37 @@ video {
   letter-spacing: 0.05em
 }
 
+.banner{
+  background: #f8f9fa;
+  background-image:url('../future_web.svg');
+  background-position: left 50% top -215px;
+  background-repeat: no-repeat;
+  background-size: 400px;
+  padding: 72px 24px;
+}
+
+.logo{
+  height: 30px;
+  width: 125px;
+}
+
+.icon-search{
+  position: absolute;
+  margin-top: 0.75rem;
+  margin-right: 1rem;
+  left:10px;
+  top:1px;
+}
+
 @media (min-width: 768px){
   .btn-primary{
     margin-right: 1rem;
     margin-bottom: 0
+  }
+
+  .banner{
+    background-position: left 430px top 50%;
+    background-size: 650px;
   }
 }
 
